packages/application/web/infrastructure/deploy/chart/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hr-for-impact-web
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`hr-for-impact.fr`)
    services:
    - name: hr-for-impact
      port: 3000
  tls:                              
    secretName: hr-for-impact.fr-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-hr-for-impact
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`hr-for-impact.fr`)
    middlewares: 
    - name: redirectscheme
    services:
    - name: hr-for-impact
      port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
spec:
  redirectScheme:
    permanent: true
    scheme: https
    port: "443"
